<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ConnectFour</string>
    <string name="action_settings">Settings</string>
    <string name="first_player_one">Player 1 first</string>
    <string name="first_player_two">Player 2 first.</string>
    <string name="turn_player_one">Player 1\'s turn.</string>
    <string name="turn_player_two">Player 2\'s turn.</string>
    <string name="result_tie">It\'s a tie!</string>
    <string name="result_player_one_wins">Player 1 Won!</string>
    <string name="result_player_two_wins">Player 2 Won!</string>
    <string name="info">Info</string>
    <string name="player_one">Player 1:  </string>
    <string name="player_two">Player 2:  </string>
    <string name="ties">Ties:  </string>
	<string name="new_game">New Game</string>
	<string name="exit_game">Exit Game</string>
	<string name="blank"> </string>
	<string name="number">1</string>
</resources>
