<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TableLayout
        android:id="@+id/PlayArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/zero0"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/one0"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/two0"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/three0"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/four0"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/five0"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/six0"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/zero1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/one1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/two1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/three1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/four1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/five1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/six1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/zero2"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/one2"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/two2"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/three2"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/four2"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/five2"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/six2"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/zero3"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/one3"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/two3"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/three3"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/four3"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/five3"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/six3"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/zero4"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/one4"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/two4"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/three4"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/four4"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/five4"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/six4"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/zero5"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/one5"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/two5"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/three5"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/four5"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/five5"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/six5"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/zero6"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/one6"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/two6"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/three6"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/four6"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/five6"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />

            <Button
                android:id="@+id/six6"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:text="@string/blank"
                android:textSize="20sp" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp" >

        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/player1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_one"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/player1Count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/number"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ties"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ties"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tieCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/number"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/player2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_two"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/player2Count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tableLayout1"
        android:layout_alignLeft="@+id/PlayArea"
        android:layout_marginBottom="28dp"
        android:gravity="center_horizontal"
        android:text="@string/info"
        android:textSize="30sp" />

</RelativeLayout>